
    - squad wand texture TODO
    - fix golem riding horse will be unusable when retrieved TODO

- 2.4.23
    - Fix command wand attack config
    - Fix damage calculation

- 2.4.22
    - fix compatibility with REI
    - add captain and squad mode
    - add free wander mode
    - make takented upgrade cheaper

- 2.4.21
    - fix riding flickering
    - target filter action show in message
    - fix datapack target filter removing
    - trim name on datapack target filter
    - target reset time changed from 5 sec to 3 sec
    - fix wand scrolling

- 2.4.20
    - fix filter tab

- 2.4.19
    - texture fix

- 2.4.18
    - Add hostility compat
    - Add target cards and target filter tab
    - Add metalgolem weapons
    - Now metalgolem will also tick equipments
    - Curios support slot modifiers

- 2.4.17
    - Omnipotent Wand
    - Curios support for backpack
    - Add secondary weapon slot and arrow slot
    - Add weapon switch delay of 10 ticks
    - Disable weapon switch when editing weapons

- 2.4.16
    - Add metal golem armors
    - Fix rendering of decorative layers on golems with size upgrade
    - Make golem give up target after 5 seconds not approaching
    - Make player not picking up items when dead
    - Add CEI compat
    - Add Attribute tab
    - Add config cards:
        - configure default golem mode when summoned
        - configure summon location: old position or current location
        - limit wand targets
        - configure lock interaction
        - pickup upgrade item filter

- 2.4.15
    - Fix non-owner being able to change humanoid equipment
    - Add Create deployer automation for upgrades
    - Golem now will only access chest within <2 blocks, and only access them in standing mode

- 2.4.14
    - Golems will attack enemies touching it first
    - Fix shield block sound
    - Now humanoid can open doors
    - Fix grindstone remove upgrade

- 2.4.13
    - Fix advancement logspam