@@ -13,7 +13,7 @@ jei_version = 15.2.0.23
 curios_version = 5.3.4+1.20.1
 
 modid = modulargolems
-ll_version = 2.4.23-pre0
+ll_version = 2.4.23-pre5
 lljij = true
 rootMod = false
 
