@@ -61,7 +61,7 @@ public class DogGolemEntity extends AbstractGolemEntity<DogGolemEntity, DogGolem
 		this.setRot(vec2.y, vec2.x);
 		this.yRotO = this.yBodyRot = this.yHeadRot = this.getYRot();
 		if (this.isControlledByLocalInstance()) {
-			if (this.onGround()) {
+			if (this.onGround() || this.isInWaterOrBubble()) {
 				if (player.jumping) {
 					this.executeRidersJump(vec3);
 				}
@@ -80,7 +80,8 @@ public class DogGolemEntity extends AbstractGolemEntity<DogGolemEntity, DogGolem
 		if (f1 <= 0.0F) {
 			f1 *= 0.25F;
 		}
-		return new Vec3(f, 0.0D, f1);
+		var ans = new Vec3(f, 0.0D, f1);
+		return ans;
 	}
 
 	public LivingEntity getControllingPassenger() {
