@@ -1,16 +1,19 @@
 
-    - squad wand texture TODO
     - fix golem riding horse will be unusable when retrieved TODO
 
 - 2.4.23
+    - Add Cataclysm compat
     - Fix command wand attack config
+    - Add upgrade slot config
     - Fix damage calculation
+    - Greatly improved golem swimming speed with Swim upgrade
+    - Allow golems to jump in water
 
 - 2.4.22
     - fix compatibility with REI
     - add captain and squad mode
     - add free wander mode
-    - make takented upgrade cheaper
+    - make talented upgrade cheaper
 
 - 2.4.21
     - fix riding flickering
